# kafka_lesson

./: README.md  pyproject.toml
src/: consume_from_kafka.py  produce_to_kafka.py
