[tool.poetry]
name = "sf-section-1"
version = "0.1.0"
description = "Practice Kafka Project for skillsfuture"
authors = ["Elson Chan <elsonccjgmail.com>"]
readme = "README.md"
include = [
    {path = "src"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiohttp = "^3.9.5"
SQLAlchemy = ">=1.4.36,<2.0"
pydantic = "^2.8.2"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"
pandas-stubs = "^2.2.2.240603"
apache-airflow = "^2.9.3"
boto3 = "^1.18.69"
kafka-python = "^2.0.2"
confluent-kafka = "^2.5.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.5"
mypy = "^1.11.0"
pytest = "^8.3.2"
flake8 = "^3.9.2"

[tool.mypy.dags.etl_dag]
# Specific configuration for etl_dag.py
ignore_missing_imports = true
ignore_errors = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
